# LearnCpp

./: .clang-format  .clang-tidy  .gitignore  BEST_PRACTICES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Notes.txt  Readme.md  conanfile.txt  main.cpp  scripts.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_main.cpp
cmake/: Coverage.cmake  Docs.cmake  Format.cmake  Helpers.cmake  Sanitize.cmake  TargetHelpers.cmake  Tidy.cmake  Versions.cmake
docs/: Doxyfile.in  cpp-memory-layout.html  memory-layout.html
examples/: CMakeLists.txt
include/: cppman.hpp  utils.hpp
include/date/: Today.h
include/greeter/: Greeter.h  IDateProvider.h
libs/imgui/: portfile.cmake  usage  vcpkg.json
scripts/: bash.bashrc  bash.sh  msys2.sh  pwh.ps1  scripts.sh
src/app/: CMakeLists.txt  goodbye.cpp  main.cpp  run.cpp  run.h  run.hpp
src/datamodel/: CMakeLists.txt
src/date/: CMakeLists.txt
src/greeter/: CMakeLists.txt  ChronoDateProvider.cpp  Greeter.cpp  Greeter.hpp  InternalDetails.h  platform_nix.cpp  platform_win.cpp
src/greeter/cmake/: GreeterLibConfig.cmake.in
src/memory/: CMakeLists.txt  characters.cpp  floats.cpp  images.cpp  integers.cpp  sounds.cpp  video_sound.cpp  videos.cpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  test_app.cpp
tests/greeter/: CMakeLists.txt  test_greeter.cpp
